# aeron-miller-index

./: .gitignore  README.md  products.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily-scrape.yml
data/: aeron-miller.csv  dyson-supersonic.csv  sony-wh1000xm5.csv
src/: __init__.py  charts.py  main.py  models.py  scraper.py
