[project]
name = "aeron-miller-index"
version = "0.1.0"
description = "Multi-product price tracker for OLX.ro with candlestick charts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.scripts]
ami = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
