[project]
name = "aeron-miller-index"
version = "0.1.0"
description = "Multi-product price tracker for OLX.ro with candlestick charts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.1",
    "plotly>=5.18",
    "kaleido>=0.2",  # For PNG export from Plotly
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.scripts]
ami = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
